--- a/src/components/GeneralSettings/style.module.scss
+++ b/src/components/GeneralSettings/style.module.scss
@@ -66,4 +66,16 @@
       }
     }
   }
+
+  &.lightTheme {
+    background: $lightBgTheme;
+
+    .title {
+      color: $darkCardSubstrateL;
+
+      svg {
+        color: $darkCardSubstrateL;
+      }
+    }
+  }
 }
