--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,10 +1,10 @@
-$darkBgTheme: linear-gradient(119.73deg, #272b40 10.57%, #121420 88.75%);
+$darkBgTheme: linear-gradient(119.73deg, #1c2039 10.57%, #121420 88.75%);
 $lightBgTheme: linear-gradient(119.73deg, #ffffff 10.57%, #f1f3f9 88.75%);
 
 $blueAccent: #349dea;
-$orangeAccent: #f06e18;
-$greenAccent: #13d386;
-$purpleAccent: #7f57f3;
+$orangeAccent: #ff9701;
+$greenAccent: #2fce78;
+$purpleAccent: #7750ec;
 $yellowAccent: #e7d321;
 $redAccent: #f55c5c;
 
@@ -17,5 +17,3 @@ $darkThemeTextColor: #ffffff;
 $lightCardSubstrateS: #ffffff;
 $lightCardSubstrateM: #e5e7f1;
 $lightCardSubstrateL: #bec2d7;
-
-// #8b8c93
