--- a/src/components/GeneralSettings/SelectRegion/style.module.scss
+++ b/src/components/GeneralSettings/SelectRegion/style.module.scss
@@ -74,7 +74,7 @@
 
       &:hover {
         path {
-          stroke: $redAccent;
+          stroke: rgb(134 10 10 / 95%);
         }
       }
     }
@@ -110,7 +110,8 @@
       font-weight: 600;
       font-size: 14px;
       line-height: 17px;
-      color: $blueAccent;
+      color: $darkThemeTextColor;
+      opacity: 0.7;
       background-color: transparent;
       transition: all 0.5s ease;
 
@@ -140,24 +141,6 @@
         flex-direction: column;
         width: 290px;
         position: relative;
-      }
-    }
-  }
-
-  &.lightTheme {
-    background: $lightCardSubstrateM;
-
-    .labelGroup {
-      p {
-        color: $darkCardSubstrateL;
-      }
-    }
-
-    .addedCities {
-      color: $darkCardSubstrateL;
-
-      li {
-        background-color: $lightCardSubstrateS;
       }
     }
   }
