--- a/src/components/Settings/Toggle/style.module.scss
+++ b/src/components/Settings/Toggle/style.module.scss
@@ -17,14 +17,14 @@
     opacity: 0.7;
 
     svg {
-      color: $blueAccent;
       width: 15px;
       height: 15px;
     }
   }
 
   .button {
-    border: 2px solid $blueAccent;
+    border: 2px solid $darkThemeTextColor;
+    opacity: 0.7;
     width: 70px;
     height: 35px;
     border-radius: 100px;
@@ -43,7 +43,7 @@
       transform: translate(40px, 5px) rotate(0);
 
       &.active {
-        color: $blueAccent;
+        color: $darkThemeTextColor;
         transform: translate(5px, 5px) rotate(-360deg);
       }
     }
@@ -52,17 +52,9 @@
       transform: translate(5px, 5px) rotate(0);
 
       &.active {
-        color: $blueAccent;
+        color: $darkThemeTextColor;
         transform: translate(40px, 5px) rotate(360deg);
       }
-    }
-  }
-
-  &.lightTheme {
-    background-color: $lightCardSubstrateM;
-
-    .label {
-      color: $darkCardSubstrateL;
     }
   }
 }
