--- a/src/components/Loader/style.module.scss
+++ b/src/components/Loader/style.module.scss
@@ -1,48 +1,101 @@
-.loader {
+.container {
   width: 360px;
   height: 133px;
-  background: $darkBgTheme;
+  // background: $darkBgTheme;
   border-radius: 30px;
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
 
-  .container {
-    width: 80px;
-    height: 80px;
-    border-radius: 100px;
+  .loader {
+    width: 72px;
+    height: 72px;
+    border-radius: 100%;
+    overflow: hidden;
+    background: #fff;
+    transform: rotate(205deg);
     position: absolute;
-    background-color: red;
+
+    & > div {
+      position: absolute;
+      overflow: hidden;
+      width: 50%;
+      height: 100%;
+    }
+
+    .loaderPart {
+      z-index: 100;
+      position: absolute;
+      left: 100%;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: $blueAccent;
+    }
+
+    .leftWrap {
+      left: 0;
+
+      .loaderPart {
+        z-index: -1;
+        transform-origin: 0 50%;
+        animation: loading-left 5s linear infinite;
+      }
+    }
+
+    .rigthtWrap {
+      left: 50%;
+
+      .loaderPart {
+        z-index: -1;
+        transform-origin: 100% 50%;
+        left: -100%;
+        animation: loading-right 5s linear infinite;
+      }
+    }
   }
 
-  .ray {
-    transform-origin: center;
-    width: 5%;
-    height: 50%;
-    background-color: aqua;
-    transform: translate(50%, 0);
+  svg {
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    position: absolute;
+    max-width: 100%;
+    max-height: 100%;
+    path {
+      stroke-width: 0.2;
+      // stroke: red;
+      fill: blue;
+    }
   }
 
-  .ray:nth-of-type(2) {
-    transform: translate(-50%, 0) rotate(45deg);
+  @keyframes loading-left {
+    0% {
+      transform: rotate(0deg);
+    }
+
+    50% {
+      transform: rotate(180deg);
+    }
+
+    100% {
+      transform: rotate(180deg);
+    }
   }
-  .ray:nth-of-type(3) {
-    transform: translate(-50%, 0) rotate(90deg);
-  }
-  .ray:nth-of-type(4) {
-    transform: translate(-50%, 0) rotate(135deg);
-  }
-  .ray:nth-of-type(5) {
-    transform: translate(-50%, 0) rotate(180deg);
-  }
-  .ray:nth-of-type(6) {
-    transform: translate(-50%, 0) rotate(225deg);
-  }
-  .ray:nth-of-type(7) {
-    transform: translate(-50%, 0) rotate(270deg);
-  }
-  .ray:nth-of-type(8) {
-    transform: translate(-50%, 0) rotate(315deg);
+
+  @keyframes loading-right {
+    0% {
+      transform: rotate(0deg);
+    }
+
+    50% {
+      transform: rotate(0deg);
+    }
+
+    100% {
+      transform: rotate(180deg);
+    }
   }
 }
