--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,8 +1,10 @@
 .container {
+  position: relative;
+  width: 360px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 30px 30px;
+  margin: 30px 30px;
   box-sizing: border-box;
 }
 
