--- a/src/components/SearchCity/style.module.scss
+++ b/src/components/SearchCity/style.module.scss
@@ -1,7 +1,7 @@
 .inputGroup {
   background-color: $darkCardSubstrateS;
   border-radius: 30px;
-  min-width: 290px;
+  width: 290px;
   height: 40px;
   display: flex;
   align-items: center;
