fix input with spaces

--- a/src/components/SearchLocation/style.module.scss
+++ b/src/components/SearchLocation/style.module.scss
@@ -33,7 +33,8 @@
   }
 }
 
-.separateInput :last-child {
+.separateInput ul:last-child,
+.separateInput div:last-child {
   top: 100px;
   width: 290px;
 }
