--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,16 +4,10 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin: 30px 30px;
+  margin: 3%;
   box-sizing: border-box;
 }
 
 .onlySelect {
   width: 360px;
-}
-
-@media (width <= 400px) {
-  .container {
-    padding: 15px;
-  }
 }
