--- a/src/components/SearchCity/style.module.scss
+++ b/src/components/SearchCity/style.module.scss
@@ -18,6 +18,7 @@
     font-weight: 600;
     font-size: 15px;
     line-height: 18px;
+    max-width: 210px;
     color: $darkThemeTextColor;
 
     &:focus {
