--- a/src/index.scss
+++ b/src/index.scss
@@ -44,9 +44,10 @@
 
 html {
   height: 100%;
+  width: 100%;
   background: linear-gradient(119.73deg, #4e5681 10.57%, #171a29 88.75%);
   background: no-repeat center url(@/assets/background.jpg);
-  background-size: 100% auto;
+  background-size: cover;
 }
 
 body {
