change background image

--- a/src/index.scss
+++ b/src/index.scss
@@ -45,7 +45,7 @@
 html {
   height: 100vh;
   background: linear-gradient(119.73deg, #4e5681 10.57%, #171a29 88.75%);
-  background-image: url(@/assets/background.png);
+  background-image: url(@/assets/background.jpg);
   background-repeat: repeat-y;
   background-position: center;
   background-size: 100%;
