--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,8 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin: 3%;
-  box-sizing: border-box;
+  padding: 3%;
 }
 
 .onlySelect {
